--- a/Software (Image processing)/c++/calibration/.vscode/settings.json
+++ b/Software (Image processing)/c++/calibration/.vscode/settings.json
@@ -103,6 +103,8 @@
     "thread": "cpp",
     "typeinfo": "cpp",
     "valarray": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "cfenv": "cpp",
+    "typeindex": "cpp"
   }
 }
