--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,10 @@
         "thread": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
-    }
+        "variant": "cpp",
+        "complex": "cpp",
+        "cfenv": "cpp",
+        "typeindex": "cpp"
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
