--- a/Software (Image processing)/c++/offline/CMakeLists.txt
+++ b/Software (Image processing)/c++/offline/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(StereoCalibration)
+project(StereoOffline)
 
 # Set OpenCV_DIR to the path where OpenCVConfig.cmake is located
 # set(OpenCV_DIR /usr/local/include/opencv4/)
@@ -13,7 +13,7 @@ find_package(OpenCV REQUIRED)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
 # Add your source files
-add_executable(StereoCalibration main.cpp Disparity.cpp StereoCalibrator.cpp StereoCamera.cpp VideoManager.cpp)
+add_executable(StereoOffline main.cpp Disparity.cpp HumanDetector.cpp VideoManager.cpp)
 
 # Link against OpenCV
-target_link_libraries(StereoCalibration ${OpenCV_LIBS})
+target_link_libraries(StereoOffline ${OpenCV_LIBS})
