--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,8 @@
         "queue": "cpp",
         "stack": "cpp",
         "__hash_table": "cpp",
-        "__tree": "cpp"
+        "__tree": "cpp",
+        "shared_mutex": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
