--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,8 @@
         "stack": "cpp",
         "__hash_table": "cpp",
         "__tree": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "ios": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
