--- a/Software (Image processing)/c++/InoorPositioningSystem/CMakeLists.txt
+++ b/Software (Image processing)/c++/InoorPositioningSystem/CMakeLists.txt
@@ -28,7 +28,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
 
-        videopalyer.h videopalyer.cpp
+        videoprocessor.h videoprocessor.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET InoorPositioningSystem APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
