--- a/Software (Image processing)/c++/InoorPositioningSystem/CMakeLists.txt
+++ b/Software (Image processing)/c++/InoorPositioningSystem/CMakeLists.txt
@@ -9,8 +9,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools Multimedia MultimediaWidgets)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools Charts)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools Multimedia MultimediaWidgets Charts)
 find_package(OpenCV)
 
 set(TS_FILES InoorPositioningSystem_en_GB.ts)
@@ -27,8 +27,14 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(InoorPositioningSystem
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
-
         videoprocessor.h videoprocessor.cpp
+        threadsafequeue.h threadsafequeue.cpp
+        dataprocessor.h dataprocessor.cpp
+        structures.h
+        dataanalysiswindow.h dataanalysiswindow.cpp dataanalysiswindow.ui
+
+
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET InoorPositioningSystem APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -52,7 +58,7 @@ else()
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
-target_link_libraries(InoorPositioningSystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Multimedia Qt${QT_VERSION_MAJOR}::MultimediaWidgets ${OpenCV_LIBS})
+target_link_libraries(InoorPositioningSystem PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Multimedia Qt${QT_VERSION_MAJOR}::MultimediaWidgets ${OpenCV_LIBS} Qt${QT_VERSION_MAJOR}::Charts)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
