Moved dataanalysiswindow to separate thread

--- a/Software (Image processing)/c++/InoorPositioningSystem/CMakeLists.txt
+++ b/Software (Image processing)/c++/InoorPositioningSystem/CMakeLists.txt
@@ -33,6 +33,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         structures.h
         dataanalysiswindow.h dataanalysiswindow.cpp dataanalysiswindow.ui
         customchartview.h customchartview.cpp
+        uwblocalizationwindow.h uwblocalizationwindow.cpp uwblocalizationwindow.ui
+
 
 
 
