--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,7 +83,8 @@
         "any": "cpp",
         "forward_list": "cpp",
         "ranges": "cpp",
-        "test": "cpp"
+        "test": "cpp",
+        "span": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/g++"
 }
